Solve the problem of flickering when switching between document pages

--- a/themes/project/static/css/custom.css
+++ b/themes/project/static/css/custom.css
@@ -49,3 +49,6 @@ footer .notice span {
   text-decoration: none !important;
 }
 
+#docsMenu {
+  display: none;
+}
